x.y.z
=====

Release date:

New features:

* Make it possible to loop patterns

Bug fixes:

0.4.0
=====

Release date:

Wed, 12 Mar 2025 22:55:47 +0200

New features:

* Music video generator (**Experimental**)
  - Generates note visualization with particle effects

* Implement Save as template

* Show status messages about MIDI devices

* Support negative instrument delays

Bug fixes:

* Fix MIDI device not playing after re-detected

* Properly destroy removed columns

* Reset state properly before changing the song

* Fix lead-out time not properly applied

* Show track/column name as tool tip text, if set

Other:

* Make pattern index selector editable

0.3.0
=====

Release date:

Sat, 08 Mar 2025 11:45:19 +0200

New features:

* Implement inverted mute states of columns/tracks by right-clicking

Bug fixes:

* Fix soloed columns of other tracks not playing

* Fix incorrect pattern on song reset
  - Position 0 doesn't always imply pattern 0

Other:

* Invalidate port name cache on new scan

0.2.0
=====

Release date:

Wed, 05 Mar 2025 23:33:50 +0200

New features:

* Add Edit menu entry to reset instruments

* Implement adjustable delays

* Implement initial note visualizer on the bottom bar

* Implement cut/copy/paste for selected lines

* Implement line selection and transpose

* Implement context menu action to interpolate velocity

* Set different color for each track

* Scroll horizontally by tab/left/right if track not visible
  - Fixes numerous issues with the horizontal scroll logic

Bug fixes:

* Update index highlights after creating tracks

* Fix already set column velocity not showing in the settings dialog

* Fix blank tracks when changing a pattern

* Fix song position not reset on initialize

* Fix lazy load on pattern length change

* Fix new columns not visible

Other:

* Always show track name as bold

* Log file metadata

* Make Tab operate on columns

0.1.0
=====

Release date:

Wed, 26 Feb 2025 08:15:31 +0200

New features:
